--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 @import '~antd/dist/antd.css';
 
+/* .StripeElement {
+  width: 70%;
+  float: right;
+  position: relative;
+  top: 50%;
+  transform: perspective(1px) translateY(-50%);
+} */
+
 .App {
   text-align: center;
 }
